bk_ida/gccida/c2/get_func_hard_reg_initial_val
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_func_hard_reg_initial_val/src/integrate.c:3524:1: error: unknown type name 'initial_value_pair_0'; did you mean 'initial_value_pair'?
initial_value_pair_0 *entries; // rax 
^~~~~~~~~~~~~~~~~~~~
initial_value_pair
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_func_hard_reg_initial_val/src/integrate.c:73:3: note: 'initial_value_pair' declared here
} initial_value_pair;
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_func_hard_reg_initial_val/src/integrate.c:3535:58: error: expected expression
hard_reg_initial_vals->entries = ( initial_value_pair_0 *)xmalloc( 0x50uLL); 
                                                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_func_hard_reg_initial_val/src/integrate.c:3535:36: error: use of undeclared identifier 'initial_value_pair_0'
hard_reg_initial_vals->entries = ( initial_value_pair_0 *)xmalloc( 0x50uLL); 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_func_hard_reg_initial_val/src/integrate.c:3543:35: error: expected expression
entries = ( initial_value_pair_0 *)xrealloc( hard_reg_initial_vals->entries, 16 * v9); 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_func_hard_reg_initial_val/src/integrate.c:3543:13: error: use of undeclared identifier 'initial_value_pair_0'
entries = ( initial_value_pair_0 *)xrealloc( hard_reg_initial_vals->entries, 16 * v9); 
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_func_hard_reg_initial_val/src/integrate.c:3552:25: error: use of undeclared identifier 'machine_mode'
result = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)reg + 2)); 
                        ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_func_hard_reg_initial_val/src/obj/integrate.o] Error 1
